# foundry

./: .gitignore  .pre-commit-config.yaml  .stats  ARCHITECTURE.md  LICENSE  README.md  STRUCTURE.md  compare.py  configurator.py  justfile  lr_finder.py  pyproject.toml  sweep.py  test_distributed_cpu.sh
data/: README.md
data/shakespeare_char/: prepare.py
docs/: architecture.md  oplot-foundry.md
docs/experiments/: oplot-foundry.md
docs/specification/: mutations.md  vision.md
experiments/: baseline.yaml  micro.yaml  mla.yaml  modern.yaml  moe.yaml  sparse_attention.yaml
foundry/: __init__.py  checkpoint.py  config.py  distributed.py  eval.py  generate.py  lora.py  metrics.py  model.py  model_factory.py  train.py  zoo.py
foundry/benchmarks/: __init__.py  constitution.py  harness.py  tasks.py
foundry/cli/: __init__.py  compare.py  lr_finder.py  sweep.py
foundry/data/: __init__.py  constitution_format.py  conversation.py  curriculum.py  dataset.py  filter.py  pack.py  preferences.py  prepare.py  synthetic.py  tokenize.py
foundry/modules/: __init__.py  alibi.py  dpo_loss.py  focal_loss.py  gelu.py  gqa.py  label_smoothing.py  mla.py  moe.py  rope.py  sliding_window.py  sparse_attention.py  swiglu.py
foundry/mutate/: __init__.py  __main__.py  architecture.py  core.py  data.py  training.py
src/: checkpoint.py  eval.py  generate.py  lora.py  model.py  model_factory.py  mutate.py  train.py  zoo.py
src/benchmarks/: __init__.py  constitution.py  harness.py
src/data/: __init__.py  constitution_format.py  conversation.py  curriculum.py  filter.py  pack.py  tokenize.py
src/modules/: __init__.py  alibi.py  dpo_loss.py  focal_loss.py  gelu.py  glu.py  gqa.py  label_smoothing.py  layernorm.py  mla.py  moe.py  qknorm.py  rmsnorm.py  rope.py  sliding_window.py  (+1 more)
tests/: conftest.py  test_activation_mutations.py  test_boundaries.py  test_checkpoint.py  test_config_validation.py  test_constitution_format.py  test_constitution_mutations.py  test_conversation.py  test_conversation_mutations.py  test_curriculum.py  test_curriculum_mutations.py  test_data.py  test_data_mutations.py  test_data_pipeline.py  test_dataset_boundaries.py  test_distributed_logic.py  test_dpo.py  test_dpo_mutations.py  test_eval.py  test_eval_constitution.py  test_eval_harness.py  test_eval_tasks.py  test_integration.py  test_lora.py  test_lora_mutations.py  test_loss_mutations.py  test_lr_schedule.py  test_mla.py  test_mla_mutations.py  test_modules.py  test_moe.py  test_moe_mutations.py  test_mutate.py  test_norm_mutations.py  test_optimizer_mutations.py  test_position_mutations.py  test_sliding_window.py  test_sliding_window_mutations.py  test_sparse_attention.py  test_sparse_attention_mutations.py  (+5 more)
(+47 files in other folders)
