[project]
name = "foundry"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "numpy",
    "typer",
    "tiktoken",
    "datasets",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "ruff>=0.13.0", "pyright>=1.1.407"]
tools = ["matplotlib>=3.5", "pyyaml>=6.0"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "C4", "C90", "SIM", "RET",
    "S", "PTH", "PERF", "RUF", "TCH", "TID", "PIE", "T20", "FLY", "FURB",
]
ignore = [
    "SIM108", "SIM117", "E501",
    "N806", "N803", "N812", "N817",
    "RET505", "RET506",
    "S101",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "T20", "S108", "PTH123"]
"foundry/train.py" = ["C901"]  # training loop is inherently complex
"foundry/cli/sweep.py" = ["C901"]  # sweep orchestration
"foundry/model.py" = ["C901"]  # config validation

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
pythonpath = ["src"]

[tool.pyright]
pythonVersion = "3.12"
include = ["foundry"]
typeCheckingMode = "strict"
reportUnnecessaryTypeIgnoreComment = true
reportDeprecated = true
reportPrivateUsage = false
reportConstantRedefinition = true
reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = true
reportDuplicateImport = true
reportMissingTypeStubs = false
